# dynet-language-model

./: .gitignore  CMakeLists.txt
src/: rnnlm.h  train_rnnlm-mp.cc
